# MovieTag-Qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediatagwriter.cpp  mediatagwriter.h  movieitemwidget.cpp  movieitemwidget.h  resources.qrc  tmdbclient.cpp  tmdbclient.h
MovieTagPackage/: install.sh  start.sh
MovieTagPackage/lib/: libfontconfig.so.1  libtag.so.1  libxcb.so.1  libxkbcommon.so.0
